# ML-project-anticipate-building-consumption

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
api/app/: train_model.py
api/app/endpoint/: ep_predict.py  ep_train.py
api/pydantic/: schemas.py
notebook/: modelisation supervisée.ipynb  notebook_preprocessing_modelisation.html  notebook_preprocessing_modelisation.ipynb  notebook_preprocessing_modelisation_final.html  template_modelistation_supervisee.ipynb
