[tool.poetry]
name = "projet6-features-engineering"
version = "0.1.0"
description = "API FastAPI pour prédiction d'énergie"
authors = ["Riddlerjoke <jay.wayne.design@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
starlette = "^0.38.0"
pandas = "^2.2.0"
numpy = "^2.0.0"
scikit-learn = "^1.5.0"
requests = "^2.32.5"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0"
ruff = "^0.6.0"

[tool.poetry.scripts]
start = "uvicorn main:app --host 0.0.0.0 --port 8003"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"